<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ad_skip">SKIP</string>
    <string name="airblock_altitude">Altitude</string>
    <string name="airblock_ascending_speed">Ascending</string>
    <string name="airblock_battery_level">Battery</string>
    <string name="airblock_car_mode">Land Mode</string>
    <string name="airblock_circle">Circle</string>
    <string name="airblock_custom_mode">Customize</string>
    <string name="airblock_drift">Drift</string>
    <string name="airblock_flight_hint_1">"Do not install shield while in Air Mode. 
Shield disrupts normal flight function."</string>
    <string name="airblock_flight_hint_2">"Fly in a calm, open environment. 
Do not fly over water."</string>
    <string name="airblock_flight_hint_3">"Before takeoff, maintain at least 2 meters of distance 
between Airblock and other people or objects."</string>
    <string name="airblock_flight_mode">Air Mode</string>
    <string name="airblock_hint_video_tutorial">Watch video</string>
    <string name="airblock_hover">Hover</string>
    <string name="airblock_how_control">Learn how to control Airblock</string>
    <string name="airblock_land">Landing</string>
    <string name="airblock_land_hint_1">Please install the shield.</string>
    <string name="airblock_land_hint_2">"Please operate on flat, dry ground. 
Entering water when in Land Mode may cause capsizing."</string>
    <string name="airblock_land_hint_3">"Before initiating Airblock, maintain at least 2 meters of 
distance between Airblock and other people or objects."</string>
    <string name="airblock_led">LED</string>
    <string name="airblock_mode_select">Please select mode</string>
    <string name="airblock_move_roll">Roll</string>
    <string name="airblock_pitching">Pitching</string>
    <string name="airblock_roll">Roll</string>
    <string name="airblock_shake">Shake</string>
    <string name="airblock_signal_strength">Signal</string>
    <string name="airblock_smove">S-Curve</string>
    <string name="airblock_somersault">Somersault</string>
    <string name="airblock_spiral">Spiral</string>
    <string name="airblock_spiral_rise">Spiral Rise</string>
    <string name="airblock_start">Start</string>
    <string name="airblock_stop">Stop</string>
    <string name="airblock_triangle">Triangle</string>
    <string name="airblock_turn_left">Turn left</string>
    <string name="airblock_turn_right">Turn right</string>
    <string name="airblock_undulating">Undulate</string>
    <string name="airblock_water_hint_1">Please operate in calm water without waves.</string>
    <string name="airblock_water_hint_2">"If distance is greater than 10 meters, you may lose 
control of Airblock due to interruption in Bluetooth signal."</string>
    <string name="airblock_water_mode">Water Mode</string>
    <string name="airblock_yaw">Yaw</string>
    <string name="alert_window_xun_wen_shan_chu">Confirm to delete?</string>
    <string name="app_name">Makeblock</string>
    <string name="ble_2.0_need_pair">Your device does not support automatic connection,please go to Settings to connect</string>
    <string name="ble_close_device">Please move the iPhone/iPad closer to your Makeblock device</string>
    <string name="ble_close_device_android">Please move the phone closer to your Makeblock device</string>
    <string name="ble_confirm_disconnect">Are you sure you want to disconnect?</string>
    <string name="ble_connect_success">Connected</string>
    <string name="ble_connecting">Connecting...</string>
    <string name="ble_connection_failed">Connection Failed.</string>
    <string name="ble_device_found">Device found. Please get closer</string>
    <string name="ble_is_not_enable">Bluetooth is not enable</string>
    <string name="ble_is_not_turned_on">Bluetooth is not turned on</string>
    <string name="ble_not_support">Device does not support bluetooth!</string>
    <string name="ble_refresh_list">Refresh List</string>
    <string name="ble_search_disconnected">Disconnected</string>
    <string name="ble_search_finish">Search finished</string>
    <string name="ble_searching">Searching devices..</string>
    <string name="ble_select_device">Please select the device</string>
    <string name="ble_setting_open">Please go to Settings---->Bluetooth to turn bluetooth on</string>
    <string name="control_arm_down">Arm Down</string>
    <string name="control_arm_up">Arm Up</string>
    <string name="control_backward">Backward</string>
    <string name="control_cancel">Cancel</string>
    <string name="control_charge">Charge</string>
    <string name="control_clamp">Clamp</string>
    <string name="control_code">Code</string>
    <string name="control_confirm">Confirm</string>
    <string name="control_connect_your_electronics">Where do you connect your electronics?</string>
    <string name="control_design">DESIGN</string>
    <string name="control_down">Down</string>
    <string name="control_form_line_following">Line Following</string>
    <string name="control_form_manual">Manual</string>
    <string name="control_form_obstacle_avoiding">Obstacle Avoiding</string>
    <string name="control_form_self_balancing">Self-Balancing</string>
    <string name="control_forward">Forward</string>
    <string name="control_group_custom">Custom</string>
    <string name="control_group_display">Display</string>
    <string name="control_group_move">Move</string>
    <string name="control_group_sense">Sense</string>
    <string name="control_heat">Heat</string>
    <string name="control_launch">Launch</string>
    <string name="control_move_backward">Move Backward</string>
    <string name="control_move_forward">Move Forward</string>
    <string name="control_ok">OK</string>
    <string name="control_only_one_voice">⚠️The operating table can only place a voice module</string>
    <string name="control_play">PLAY</string>
    <string name="control_port">Port</string>
    <string name="control_recognition_failed">⚠️Speech recognition failed.</string>
    <string name="control_rename">Rename Widget</string>
    <string name="control_rotate_anticlockwise">Rotate Counterclockwise</string>
    <string name="control_rotate_clockwise">Rotate Clockwise</string>
    <string name="control_rotate_plus">Rotate+</string>
    <string name="control_rotate_sub">Rotate-</string>
    <string name="control_sound">Sound</string>
    <string name="control_turn_left">Turn Left</string>
    <string name="control_turn_right">Turn Right</string>
    <string name="control_unclamp">Unclamp</string>
    <string name="control_up">Up</string>
    <string name="control_widget_bad_network">The current poor network, please try later</string>
    <string name="control_widget_bar_display">DashBoard</string>
    <string name="control_widget_blue">Blue</string>
    <string name="control_widget_brightness">Brightness</string>
    <string name="control_widget_button">Button</string>
    <string name="control_widget_button_state">Button State</string>
    <string name="control_widget_buzz">Buzz</string>
    <string name="control_widget_dance">Dance</string>
    <string name="control_widget_dc_motor">DC Motor</string>
    <string name="control_widget_dc_motor_four">DC Motor4</string>
    <string name="control_widget_dc_motor_one">DC Motor1</string>
    <string name="control_widget_dc_motor_three">DC Motor3</string>
    <string name="control_widget_dc_motor_two">DC Motor2</string>
    <string name="control_widget_disc_lightness">Lightness</string>
    <string name="control_widget_dpad">Quad-direction Pad</string>
    <string name="control_widget_encoder_motor">Encoder Motor</string>
    <string name="control_widget_encoder_motor_one">Encoder Motor1</string>
    <string name="control_widget_encoder_motor_three">Encoder Motor3</string>
    <string name="control_widget_encoder_motor_two">Encoder Motor2</string>
    <string name="control_widget_escape">Escape from the ceiling</string>
    <string name="control_widget_follow_spot">follow spot mode</string>
    <string name="control_widget_go_back">Go back</string>
    <string name="control_widget_go_forward">Go forward</string>
    <string name="control_widget_green">Green</string>
    <string name="control_widget_indicator">Indicator</string>
    <string name="control_widget_joystick">Joystick</string>
    <string name="control_widget_joystick_x_value">Joystick X Value</string>
    <string name="control_widget_joystick_y_value">Joystick Y Value</string>
    <string name="control_widget_keep_moving">Keep Moving</string>
    <string name="control_widget_landing">Land</string>
    <string name="control_widget_laser_color">Laser Blade Color</string>
    <string name="control_widget_laser_switch">The Force Awakens</string>
    <string name="control_widget_led_color">LED COLOR</string>
    <string name="control_widget_lightness">Lightness</string>
    <string name="control_widget_limit_switch_state">Limit Switch State</string>
    <string name="control_widget_linefollower_sensor">Linefollower Sensor</string>
    <string name="control_widget_linegraph">Line Graph</string>
    <string name="control_widget_look_around">look around</string>
    <string name="control_widget_loudness">Loudness</string>
    <string name="control_widget_low_battery">Low battery</string>
    <string name="control_widget_low_sound">The sound is too low, please try again</string>
    <string name="control_widget_speak_msg_one">turn left/right, dance</string>
    <string name="control_widget_speak_msg_two">go forward/back, stop</string>
    <string name="control_widget_speak_to_it">Press and Say</string>
    <string name="control_widget_speaker_powered_by">Powered By IFLYTEK</string>
    <string name="project_connect_other_devices">Connect Another Device</string>
    <string name="project_dismatch">Device Dismatch</string>
    <string name="project_not_behave_correctly">Robot may behave incorrectly</string>
    <string name="social_about_makeblock">About</string>
    <string name="social_firmware">Firmware</string>
    <string name="social_groups">Groups</string>
    <string name="tut_add_new_fun">2.Add new functions to control panels</string>
    <string name="tut_create_panel">1.Create your own control panels</string>
    <string name="tut_edit">Tap to open the edit menu</string>
    <string name="tut_edit_code">Edit Blockly code</string>
    <string name="tut_enter_design_mode">In Design Mode, you can:</string>
    <string name="tut_set_port">Choose connected port</string>
</resources>