<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.percent.PercentRelativeLayout android:background="@drawable/bg_shape_popup" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerInParent="true" app:layout_widthPercent="90.0%" app:layout_heightPercent="90.0%">
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_widget_speak_to_it" android:layout_centerHorizontal="true" app:layout_heightPercent="13.999998%" app:layout_marginTopPercent="20.000004%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="40.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/control_widget_speak_msg_one" android:layout_centerHorizontal="true" app:layout_widthPercent="60.000004%" app:layout_heightPercent="14.999998%" app:layout_marginTopPercent="39.999996%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="40.0sp" android:textColor="@color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/control_widget_speak_msg_two" android:layout_centerHorizontal="true" app:layout_widthPercent="60.000004%" app:layout_heightPercent="14.999998%" app:layout_marginTopPercent="55.000008%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/gray_bg" android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_widget_speaker_powered_by" android:layout_centerHorizontal="true" app:layout_heightPercent="10.000002%" app:layout_marginTopPercent="79.99999%" />
    </android.support.percent.PercentRelativeLayout>
    <ImageView android:id="@id/popup_close" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/nav_selector_popup_close" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" app:layout_heightPercent="14.999998%" app:layout_aspectRatio="100.0%" />
</android.support.percent.PercentRelativeLayout>