<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="#ff323c52" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/tut_edit" android:layout_centerHorizontal="true" app:layout_heightPercent="5.9999943%" app:layout_marginTopPercent="8.000004%" />
    <android.support.percent.PercentFrameLayout android:background="@drawable/image_guide_page_3" android:layout_width="0.0dip" android:layout_height="0.0dip" android:scaleType="centerCrop" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:layout_heightPercent="62.950005%" app:layout_marginTopPercent="10.930002%" app:layout_marginBottomPercent="17.149998%" app:layout_aspectRatio="164.29749%">
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="#ffff4741" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/tut_set_port" app:layout_heightPercent="4.7659993%" app:layout_marginLeftPercent="79.0%" app:layout_marginTopPercent="37.0%" />
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="#ffff4741" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/tut_edit_code" app:layout_heightPercent="4.7659993%" app:layout_marginLeftPercent="79.0%" app:layout_marginTopPercent="47.000004%" />
    </android.support.percent.PercentFrameLayout>
</android.support.percent.PercentRelativeLayout>