<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/image_guide_page_1" android:scaleType="centerCrop" android:layout_centerHorizontal="true" app:layout_heightPercent="25.100004%" app:layout_marginTopPercent="10.930002%" app:layout_aspectRatio="100.0%" />
    <cc.makeblock.makeblock.customview.PercentLinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_centerHorizontal="true">
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="#ff323c52" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/tut_enter_design_mode" app:layout_heightPercent="6.2000036%" app:layout_marginTopPercent="46.000004%" />
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="#ff323c52" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/tut_create_panel" app:layout_heightPercent="4.6000004%" app:layout_marginTopPercent="4.999995%" />
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="#ff323c52" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/tut_add_new_fun" app:layout_heightPercent="4.6000004%" app:layout_marginTopPercent="3.9999962%" />
    </cc.makeblock.makeblock.customview.PercentLinearLayout>
</android.support.percent.PercentRelativeLayout>