<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout android:background="@drawable/bg_image_popup_arrow_up_center" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <cc.makeblock.makeblock.customview.PercentLinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/mode_select_container" android:background="@drawable/bg_shape_menu_dropdown" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_form_manual" app:layout_heightPercent="4.999995%" app:layout_marginTopPercent="2.4999976%" app:layout_marginBottomPercent="2.4999976%" />
        <View android:id="@id/view_line1" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_widthPercent="79.99999%" app:layout_heightPercent="0.10000467%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_form_obstacle_avoiding" app:layout_heightPercent="4.999995%" app:layout_marginTopPercent="2.4999976%" app:layout_marginBottomPercent="2.4999976%" />
        <View android:id="@id/view_line2" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_widthPercent="79.99999%" app:layout_heightPercent="0.10000467%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title3" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_form_line_following" app:layout_heightPercent="4.999995%" app:layout_marginTopPercent="2.4999976%" app:layout_marginBottomPercent="2.4999976%" />
        <View android:id="@id/view_line3" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_widthPercent="79.99999%" app:layout_heightPercent="0.10000467%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_form_self_balancing" app:layout_heightPercent="4.999995%" app:layout_marginTopPercent="2.4999976%" app:layout_marginBottomPercent="2.4999976%" />
    </cc.makeblock.makeblock.customview.PercentLinearLayout>
</android.support.percent.PercentRelativeLayout>