<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout android:background="@drawable/bg_image_main_menu" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <cc.makeblock.makeblock.customview.PercentLinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_shape_menu_dropdown" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/menu_item_groups" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/social_groups" app:layout_heightPercent="4.999995%" app:layout_marginTopPercent="2.4999976%" app:layout_marginBottomPercent="2.4999976%" />
        <View android:id="@id/view_line1" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:layout_widthPercent="79.99999%" app:layout_heightPercent="0.10000467%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/menu_item_firmware_update" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/social_firmware" app:layout_heightPercent="4.999995%" app:layout_marginTopPercent="2.4999976%" app:layout_marginBottomPercent="2.4999976%" />
        <View android:id="@id/view_line2" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" app:layout_widthPercent="79.99999%" app:layout_heightPercent="0.10000467%" />
        <cc.makeblock.makeblock.customview.AutoResizeTextView android:textSize="100.0sp" android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/menu_item_about_app" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/social_about_makeblock" app:layout_heightPercent="4.999995%" app:layout_marginTopPercent="2.4999976%" app:layout_marginBottomPercent="2.4999976%" />
    </cc.makeblock.makeblock.customview.PercentLinearLayout>
</android.support.percent.PercentRelativeLayout>