<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout android:background="@drawable/bg_shape_mode_dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/black" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/airblock_mode_select" app:layout_heightPercent="8.000004%" app:layout_marginTopPercent="13.999998%" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_heightPercent="55.000008%" app:layout_marginTopPercent="35.000004%">
        <android.support.percent.PercentRelativeLayout android:orientation="vertical" android:id="@id/airblock_mode_drone" android:background="@drawable/bg_airblock_mode_item" android:padding="6.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="16.0dip" android:layout_marginRight="4.0dip" android:layout_weight="1.0" android:layout_marginStart="16.0dip" android:layout_marginEnd="8.0dip">
            <ImageView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/image_airblock_mode_drone" app:layout_heightPercent="70.00001%" />
            <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/airblock_flight_mode" app:layout_heightPercent="10.000002%" app:layout_marginTopPercent="77.0%" />
        </android.support.percent.PercentRelativeLayout>
        <android.support.percent.PercentRelativeLayout android:orientation="vertical" android:id="@id/airblock_mode_car" android:background="@drawable/bg_airblock_mode_item" android:padding="6.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_weight="1.0" android:layout_marginStart="4.0dip" android:layout_marginEnd="8.0dip">
            <ImageView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/image_airblock_mode_car" app:layout_heightPercent="70.00001%" />
            <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/airblock_car_mode" app:layout_heightPercent="10.000002%" app:layout_marginTopPercent="77.0%" />
        </android.support.percent.PercentRelativeLayout>
        <android.support.percent.PercentRelativeLayout android:orientation="vertical" android:id="@id/airblock_mode_hovercraft" android:background="@drawable/bg_airblock_mode_item" android:padding="6.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_weight="1.0" android:layout_marginStart="4.0dip" android:layout_marginEnd="8.0dip">
            <ImageView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/image_airblock_mode_hovercraft" app:layout_heightPercent="70.00001%" />
            <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/airblock_water_mode" app:layout_heightPercent="10.000002%" app:layout_marginTopPercent="77.0%" />
        </android.support.percent.PercentRelativeLayout>
        <android.support.percent.PercentRelativeLayout android:orientation="vertical" android:id="@id/airblock_mode_customize" android:background="@drawable/bg_airblock_mode_item" android:padding="6.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="4.0dip" android:layout_marginRight="16.0dip" android:layout_weight="1.0" android:layout_marginStart="4.0dip" android:layout_marginEnd="16.0dip">
            <ImageView android:background="#ffe4e4e4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/image_airblock_mode_customize" app:layout_heightPercent="70.00001%" />
            <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/black" android:gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/airblock_custom_mode" app:layout_heightPercent="10.000002%" app:layout_marginTopPercent="77.0%" />
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>