<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout android:background="@drawable/bg_image_popup_arrow_up_center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.percent.PercentRelativeLayout android:background="@drawable/bg_shape_menu_dropdown" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <View android:id="@id/view_line1" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerHorizontal="true" app:layout_widthPercent="90.0%" app:layout_heightPercent="0.49999952%" app:layout_marginTopPercent="25.0%" />
        <View android:id="@id/view_line2" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerHorizontal="true" app:layout_widthPercent="90.0%" app:layout_heightPercent="0.49999952%" app:layout_marginTopPercent="50.0%" />
        <View android:id="@id/view_line3" android:background="#ff555e69" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_centerHorizontal="true" app:layout_widthPercent="90.0%" app:layout_heightPercent="0.49999952%" app:layout_marginTopPercent="75.0%" />
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_form_obstacle_avoiding" app:layout_heightPercent="13.999998%" app:layout_marginTopPercent="5.9999943%" />
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_form_line_following" android:layout_below="@id/view_line1" app:layout_heightPercent="13.999998%" app:layout_marginTopPercent="4.999995%" />
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title3" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="" android:layout_below="@id/view_line2" app:layout_heightPercent="13.999998%" app:layout_marginTopPercent="4.999995%" />
        <cc.makeblock.makeblock.customview.FitHeightTextView android:textColor="@color/color_text_yellow" android:gravity="center" android:id="@id/tv_title4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/control_form_self_balancing" android:layout_alignParentBottom="true" app:layout_heightPercent="13.999998%" app:layout_marginBottomPercent="4.999995%" />
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>